tests/error/array_errors/array_index_set.err
Error: Index out of bounds (at $FILE:7:6)
  | 
5 | def main() -> None:
6 |       arr = array(0 for _ in range(5))
7 |       arr[10] = 42
  |       ^^^^^^^ Array index 10 is out of bounds for array of size 5.

Guppy compilation failed due to 1 previous error
